add_executable(Thread_unittest Thread_unittest.cpp)
target_link_libraries(Thread_unittest utils)
include_directories(..)
include_directories(../utils/)
install(TARGETS Thread_unittest DESTINATION bin)

add_executable(Buffer_unittest Buffer_unittest.cpp)
target_link_libraries(Buffer_unittest utils)
include_directories(..)
include_directories(../utils/)
install(TARGETS Buffer_unittest DESTINATION bin)

add_executable(XmlParser_unittest XmlParser_unittest.cpp)
target_link_libraries(XmlParser_unittest utils tinyxml)
include_directories(..)
include_directories(../utils/)
install(TARGETS XmlParser_unittest DESTINATION bin)

add_executable(Timer_unittest Timer_unittest.cpp)
target_link_libraries(Timer_unittest utils port)
include_directories(..)
include_directories(../utils/)
include_directories(../port/)
install(TARGETS Timer_unittest DESTINATION bin)
